# Boids-SFML

./: .gitignore  CMakeLists.txt
src/: BoidObject.cpp  BoidObject.hpp  Flock.cpp  Flock.hpp  main.cpp
